# VoxCoreGameTemplate

./: .gitignore  .gitmodules  CMakeLists.txt
CMakeUtils/: ConfigureBuildInfo.cmake  Platform.cmake
CMakeUtils/Templates/: EngineInfo.h.in  GameInfo.h.in
Game/: CMakeLists.txt
Game/Private/: EntryPoint.cpp
Game/Private/Core/: Game.cpp
Game/Public/Core/: Game.h  GameInfo.h
Launcher/: CMakeLists.txt
Launcher/src/: main.cpp
